dfir_rs/tests/snapshots/surface_difference__diff_multiset_tick_static@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_difference.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>difference_multiset::&lt;'tick, 'static&gt;()</code>"/]:::pullClass
2v1[\"(2v1) <code>sort()</code>"/]:::pullClass
3v1[/"(3v1) <code>for_each(|v| output_send.send(v).unwrap())</code>"\]:::pushClass
4v1[\"(4v1) <code>source_stream(pos_recv)</code>"/]:::pullClass
5v1[\"(5v1) <code>source_stream(neg_recv)</code>"/]:::pullClass
6v1[/"(6v1) <code>tee()</code>"\]:::pushClass
7v1[/"(7v1) <code>for_each(|x| println!(&quot;neg: {:?}&quot;, x))</code>"\]:::pushClass
8v1["(8v1) <code>handoff</code>"]:::otherClass
9v1["(9v1) <code>handoff</code>"]:::otherClass
10v1["(10v1) <code>handoff</code>"]:::otherClass
2v1-->3v1
1v1-->8v1
4v1-->10v1
5v1-->6v1
6v1-->9v1
6v1-->7v1
8v1--x2v1; linkStyle 6 stroke:red
9v1--x|neg|1v1; linkStyle 7 stroke:red
10v1-->|pos|1v1
subgraph sg_1v1 ["sg_1v1 stratum 1"]
    1v1
    subgraph sg_1v1_var_diff ["var <tt>diff</tt>"]
        1v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 2"]
    2v1
    3v1
    subgraph sg_2v1_var_diff ["var <tt>diff</tt>"]
        2v1
        3v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 0"]
    5v1
    6v1
    7v1
    subgraph sg_3v1_var_negs ["var <tt>negs</tt>"]
        5v1
        6v1
    end
end
subgraph sg_4v1 ["sg_4v1 stratum 0"]
    4v1
    subgraph sg_4v1_var_poss ["var <tt>poss</tt>"]
        4v1
    end
end

